--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>SPA Javascript</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="#">Javascript Vanilla SPA</a>
       <button
         class="navbar-toggler"
