--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,10 @@
     <title>SPA Javascript</title>
   </head>
   <body>
+
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Javascript Vanilla SPA</a>
+      <a class="navbar-brand" href="#/">Javascript Vanilla SPA</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -24,14 +26,16 @@
         <ul class="navbar-nav">
           
           <li class="nav-item">
-            <a class="nav-link" href="/#">Home</a>
+            <a class="nav-link" href="#/products">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/#posts">Posts</a>
+            <a class="nav-link" href="#/posts">Posts</a>
           </li>
           
         </ul>
       </div>
     </nav>
+    <!-- Main Content -->
+    <section id="root"></section>
   </body>
 </html>
