--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,8 @@
       </div>
     </nav>
     <!-- Main Content -->
-    <section id="root"></section>
+    <div class="container">
+      <section id="root"></section>
+    </div>
   </body>
 </html>
